small user experience improvements

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,7 +22,7 @@
             all</button>
         <p id="deleteAllTag">(Deletes all the passwords in the database)</p>
         <br>
-        <button id="getAll" onclick="httpGet('http://localhost:8080/api/v1/passwords')">Get all passwords</button>
+        <button id="getAll" onclick="httpGet('http://localhost:8080/api/v1/passwords',1)">Get all passwords</button>
         <p id="getAllTag">(Shows all the passwords in the database)</p>
         <br>
         <button onclick="httpPutThisPassword('http://localhost:8080/api/v1/passwords/save-this-password')">Add this password</button>  
