--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,7 +27,7 @@
         <br>
         <button onclick="httpPutThisPassword('http://localhost:8080/api/v1/passwords/save-this-password')">Add this password</button>  
         <input id="passwordToAdd" type="password">
-        <p id="clearTag">(Has to be greater than 8)</p>
+        <p id="pwToAdd">(Has to be greater than 8)</p>
         <br> 
         <button id="clear">Clear</button>
         <p id="clearTag">(Clears the screen)</p>
