--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -19,6 +19,9 @@
                     <label for="username">Username</label>
                     <input id="name" type="text" placeholder="Enter your username" required>
                     <br>
+                    <label for="email">Email</label>
+                    <input id="email" type="email" placeholder="Enter your email" required>
+                    <br>
                     <label class="pw-label" for="password">Password</label>
                     <input id="password" type="password" placeholder="Enter your password" required>
                 </div>
