--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <h1>Login to access the password generator</h1>
-        <form th:action="@{/login.html}" method="post">
+        <form method="post">
             <div class="form-container">
                 <div class="form-second-container">
                     <label for="name">Username</label>
