--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="www.thymeleaf.org" ></html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,14 +10,14 @@
 <body>
     <div class="container">
         <h1>Register to access the password generator</h1>
-        <form method="post">
+        <form th:action="@{register}" method="post">
             <div class="form-container">
                 <div class="form-second-container">
                     <label for="name">Username</label>
                     <input id="name" type="text" name="username" placeholder="Enter your username" >
                     <br>
                     <label for="email">Email</label>
-                    <input id="email" type="email" placeholder="Enter your email">
+                    <input id="email" type="email"  placeholder="Enter your email">
                     <br> 
                     <label class="pw-label" for="password">Password</label>
                     <input id="password" type="password" name="password" placeholder="Enter your password">
@@ -26,8 +26,9 @@
             </div>
             
         </form>
+        <button type="submit" class="register-btn">Register</button>
         <button class="login-btn"><a href="/login.html">Login</a></button>
-        <button class="register-btn">Register</button>
+        
     </div>
 </body>
 </html>
