login-reg with plain text password works

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -16,18 +16,18 @@
             <div class="form-container">
                 <div class="form-second-container">
                     <label for="name">Username</label>
-                    <input id="name" type="text" name="username" placeholder="Enter your username">
+                    <input id="name" type="text" name="username" placeholder="Enter your username" required>
                     <br>
                     <!-- <label for="email">Email</label>
                     <input id="email" type="email" placeholder="Enter your email" required>
                     <br> -->
                     <label class="pw-label" for="password">Password</label>
-                    <input id="password" type="password" name="password" placeholder="Enter your password">
+                    <input id="password" type="password" name="password" placeholder="Enter your password" required>
                 </div>
 
             </div>
-            <button type="submit" class="login-btn">Login</button>
             <button class="register-btn"><a href="/register.html">Register</a></button>
+            <button type="submit" class="login-btn">Login</button>
         </form>
 
     </div>
